Mute still broken